# rust-admin

./: AGENTS.md  README.md
backend/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
backend/config/: config.toml
backend/migrations/: 20260331064738_create_users_table.sql  20260331070000_create_roles_table.sql  20260331080000_add_password_hash_to_users.sql  20260402000000_create_menus_table.sql  20260402075644_create_sys_role_menu_table.sql  20260402100000_restructure_users_table.sql  20260402110000_add_role_fields.sql  20260402120000_create_orgs_table.sql
backend/migrations/p_sys/: 1_init.sql  2_seed.sql  3_sys_logrecord.sql
backend/src/: app.rs  lib.rs  main.rs
backend/src/api/: logging_middleware.rs  middleware.rs  mod.rs  routes.rs
backend/src/auth/: handlers.rs  mod.rs  repository.rs  service.rs
backend/src/common/: base.rs  error.rs  mod.rs  pagination.rs  traits.rs  util.rs  value_objects.rs
backend/src/common/sqlite/: query_builder.rs
backend/src/config/: mod.rs
backend/src/menu/: domain.rs  entity.rs  handlers.rs  repository.rs  service.rs
backend/src/migration/: add_sys_logrecord.rs  m20260331064738_create_users.rs  m20260331070000_create_roles.rs  m20260331080000_add_password_hash.rs  m20260402000000_create_menus.rs  m20260402075644_create_sys_role_menu.rs  m20260402100000_restructure_users.rs  m20260402110000_add_role_fields.rs  m20260402120000_create_orgs.rs  mod.rs  p_sys_tables_from_file.rs
backend/src/org/: domain.rs  entity.rs  handlers.rs  repository.rs  service.rs
backend/src/role/: domain.rs  entity.rs  handlers.rs  mod.rs  repository.rs  service.rs  sys_role_menu.rs  user_role.rs
backend/src/sys_auth/: domain.rs  handlers.rs  mod.rs  service.rs
backend/src/sys_dict/: domain.rs  entity.rs  handlers.rs  mod.rs  repository.rs  service.rs
backend/src/sys_dict_item/: domain.rs  entity.rs  handlers.rs  repository.rs  service.rs
backend/src/system/: mod.rs
backend/src/system/sys_auth/: domain.rs  handlers.rs  service.rs
backend/src/user/: domain.rs  entity.rs  handlers.rs  repository.rs  service.rs
backend/tests/auth/: auth_service_tests.rs
backend/tests/common/: email_tests.rs  error_tests.rs  util_tests.rs
backend/tests/logging/: logging_middleware_tests.rs
backend/tests/menu/: menu_repository_tests.rs  menu_service_tests.rs
backend/tests/migrations/: 1_init.sql
backend/tests/org/: org_api_tests.rs  org_repository_tests.rs  org_service_tests.rs
backend/tests/role/: role_api_tests.rs  role_repository_tests.rs  role_service_tests.rs
backend/tests/sys_auth/: sys_auth_service_tests.rs
backend/tests/sys_dict/: sys_dict_service_tests.rs
backend/tests/sys_dict_item/: sys_dict_item_service_tests.rs
backend/tests/sys_log/: sys_log_service_tests.rs
backend/tests/user/: user_api_tests.rs  user_repository_tests.rs  user_service_tests.rs
frontend/: .env  (+13 more)
(+143 files in other folders)
