[package]
name = "x-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
base64 = "0.22"
bcrypt = "0.16"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
futures-util = "0.3"
jsonwebtoken = "9"
md-5 = "0.10"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "macros"] }
sea-orm = { version = "1.1", features = ["runtime-tokio-native-tls", "macros", "sqlx-sqlite"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "18"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lib]

[[test]]
name = "user_service_tests"
path = "tests/user/user_service_tests.rs"

[[test]]
name = "user_repository_tests"
path = "tests/user/user_repository_tests.rs"

[[test]]
name = "user_api_tests"
path = "tests/user/user_api_tests.rs"

[[test]]
name = "role_service_tests"
path = "tests/role/role_service_tests.rs"

[[test]]
name = "role_repository_tests"
path = "tests/role/role_repository_tests.rs"

[[test]]
name = "role_api_tests"
path = "tests/role/role_api_tests.rs"

[[test]]
name = "menu_service_tests"
path = "tests/menu/menu_service_tests.rs"

[[test]]
name = "menu_repository_tests"
path = "tests/menu/menu_repository_tests.rs"

[[test]]
name = "org_service_tests"
path = "tests/org/org_service_tests.rs"

[[test]]
name = "org_repository_tests"
path = "tests/org/org_repository_tests.rs"

[[test]]
name = "org_api_tests"
path = "tests/org/org_api_tests.rs"

[[test]]
name = "auth_service_tests"
path = "tests/auth/auth_service_tests.rs"

[[test]]
name = "sys_auth_service_tests"
path = "tests/sys_auth/sys_auth_service_tests.rs"

[[test]]
name = "email_tests"
path = "tests/common/email_tests.rs"

[[test]]
name = "error_tests"
path = "tests/common/error_tests.rs"

[[test]]
name = "util_tests"
path = "tests/common/util_tests.rs"

[[test]]
name = "sys_dict_service_tests"
path = "tests/sys_dict/sys_dict_service_tests.rs"

[[test]]
name = "sys_dict_item_service_tests"
path = "tests/sys_dict_item/sys_dict_item_service_tests.rs"

[[test]]
name = "sys_log_service_tests"
path = "tests/sys_log/sys_log_service_tests.rs"

[[test]]
name = "logging_middleware_tests"
path = "tests/logging/logging_middleware_tests.rs"
